--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 @import "tailwindcss";
 @plugin "daisyui" {
-   themes: light;
- }
- *{
+  themes: light;
+}
+* {
   color: white;
- }
+}
+a.active {
+  @apply underline underline-offset-6 decoration-purple-500;
+}
