profile update done

--- a/src/index.css
+++ b/src/index.css
@@ -3,5 +3,5 @@
   themes: light;
 }
 a.active {
-  @apply underline underline-offset-6 decoration-purple-500;
+  @apply underline underline-offset-7 decoration-4 decoration-purple-500;
 }
